# gis_graphical_editor

./: .gitignore  FEATURES.md  README.md  pyproject.toml
asset/: 2026-04-20_181129_AutoLog_Key_West.gpx
scripts/: build_documentation_pdfs.py  capture_documentation_screenshots.py
src/gis_graphical_editor/: __init__.py  gpx_utility.py  icon_utility.py  main_window.py  map_icon_utility.py  map_marker_tooltip_utility.py  map_overlay_display_manager.py  map_overlay_mode_panel.py  map_segment_label_overlay.py  overlay_mode.py  right_sidebar_drawer.py  segment_list_panel.py  time_slider_panel.py  track_analysis.py  track_display_options.py  track_metadata_panel.py
src/gis_graphical_editor/entrypoint/: gge.py
tests/: test_gpx_segment_names.py  test_gpx_utility.py  test_icon_utility.py  test_main_window_map_zoom.py  test_main_window_track_metadata.py  test_map_icon_utility.py  test_map_marker_tooltip_utility.py  test_map_overlay_mode_panel.py  test_map_segment_label_overlay.py  test_overlay_mode.py  test_right_sidebar_drawer.py  test_segment_list_panel.py  test_time_slider_panel.py  test_track_analysis.py  test_track_display_options.py  test_track_metadata_panel.py  test_track_segment_names.py
tests/entrypoint/: test_gge.py
